[package]
name = "sw-reports"
version = "0.1.0"
edition = "2024"

[dependencies]

# UI & Nav
tokio = { version = "1.49", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "sync",
]}
tokio-util = { version = "0.7.13", features = ["compat"] }
iced = { version = "0.14.0", features = ["tokio", "canvas"] }
lucide-icons = { version = "0.563.0", features = ["iced"] }
chrono = "0.4.43"
csv-async = "1.3.1"
futures = "0.3.30"
directories = "6.0.0"
image = "0.25.9"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
thiserror = "2.0.18"
uuid = "1.20.0"
